Fix alignment of icons on homepage CTA cards

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -185,6 +185,7 @@ a{
 .imageAlignTop .blockImage {
     margin-bottom: 20px;
     max-width: 40px;
+    height:47px;
 }
 .blockContent{
     color: #2a3f7d;
